--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for [@dog, @booking] do |f| %>
 
   <div class="form-inputs">
-    <%= f.input :start_date, as: :date %>
+    <%= f.input :start_date, as: :date } %>
   </div>
 
   <div class="form-inputs">
-    <%= f.input :end_date, as: :date %>
+    <%= f.input :end_date, as: :date%>
   </div>
 
   <div class="form-inputs">
