--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@dog, @booking] do |f| %>
+<%= simple_form_for [dog, booking], html: { data: { dates: dates }} do |f| %>
 
   <div class="form-inputs">
     <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
@@ -16,4 +16,3 @@
     <%= f.button :submit %>
   </div>
 <% end %>
-
