--- a/app/assets/stylesheets/pages/_profile_container.scss
+++ b/app/assets/stylesheets/pages/_profile_container.scss
@@ -5,4 +5,12 @@
 
 .dog-content {
   padding: 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card {
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
